--- a/server/package.json
+++ b/server/package.json
@@ -1,22 +1,28 @@
 {
   "dependencies": {
+    "bcrypt": "^5.0.1",
     "connect-redis": "^6.0.0",
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
-    "eslint": "^8.1.0",
     "express": "^4.17.1",
     "express-session": "^1.17.2",
     "express-sessions": "^1.0.6",
+    "hbs": "^4.1.2",
     "pg": "^8.7.1",
     "pg-hstore": "^2.3.4",
-    "prettier": "^2.4.1",
     "redis": "^3.1.2",
     "sequelize": "^6.8.0",
-    "sequelize-cli": "^6.2.0",
     "websocket": "^1.0.34"
   },
   "devDependencies": {
+    "eslint": "^7.32.0",
+    "eslint-config-airbnb-base": "^14.2.1",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-import": "^2.25.2",
+    "eslint-plugin-prettier": "^4.0.0",
     "morgan": "^1.10.0",
-    "nodemon": "^2.0.14"
+    "nodemon": "^2.0.14",
+    "prettier": "^2.4.1",
+    "sequelize-cli": "^6.2.0"
   }
 }
