--- a/server/package.json
+++ b/server/package.json
@@ -13,7 +13,8 @@
     "redis": "^3.1.2",
     "sequelize": "^6.8.0",
     "sequelize-cli": "^6.2.0",
-    "websocket": "^1.0.34"
+    "websocket": "^1.0.34",
+    "ws": "^8.2.3"
   },
   "devDependencies": {
     "morgan": "^1.10.0",
