--- a/server/package.json
+++ b/server/package.json
@@ -1,4 +1,9 @@
 {
+  "scripts": {
+    "start":"node app.js",
+    "dev":"nodemon app.js",
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
   "dependencies": {
     "bcrypt": "^5.0.1",
     "connect-redis": "^6.0.0",
