--- a/server/package.json
+++ b/server/package.json
@@ -3,7 +3,8 @@
   "version": "1.0.0",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "killall -9 node; clear; node server.js",
+    "dev": "killall -9 node; clear; nodemon server.js"
   },
   "keywords": [],
   "author": "",
