--- a/server/package.json
+++ b/server/package.json
@@ -7,7 +7,7 @@
   "license": "ISC",
   "main": "index.js",
   "scripts": {
-    "start": "node app.js",
+    "start": "node server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
@@ -24,6 +24,7 @@
     "pg-hstore": "^2.3.4",
     "redis": "^3.1.2",
     "sequelize": "^6.8.0",
+    "uuid": "^8.3.2",
     "websocket": "^1.0.34"
   },
   "devDependencies": {
