--- a/client/package.json
+++ b/client/package.json
@@ -23,6 +23,7 @@
     "redux-devtools-extension": "^2.13.9",
     "redux-saga": "^1.1.3",
     "redux-thunk": "^2.4.0",
+    "sass": "^1.43.4",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
