--- a/server/package.json
+++ b/server/package.json
@@ -26,9 +26,8 @@
     "sequelize": "^6.8.0",
     "sequelize-cli": "^6.2.0",
     "websocket": "^1.0.34",
-    "ws": "^8.2.3"
-    "uuid": "^8.3.2",
-    "websocket": "^1.0.34"
+    "ws": "^8.2.3",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "eslint": "^7.32.0",
