--- a/server/package.json
+++ b/server/package.json
@@ -13,17 +13,23 @@
   "dependencies": {
     "bcrypt": "^5.0.1",
     "connect-redis": "^6.0.0",
+    "cookie-parser": "^1.4.5",
+    "cookie-session": "^1.4.0",
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "express-session": "^1.17.2",
+    "faker": "^5.5.3",
     "jsonwebtoken": "^8.5.1",
     "passport": "^0.5.0",
+    "passport-google-oauth2": "^0.2.0",
+    "passport-google-oauth20": "^2.0.0",
     "passport-jwt": "^4.0.0",
     "pg": "^8.7.1",
     "pg-hstore": "^2.3.4",
     "redis": "^3.1.2",
     "sequelize": "^6.8.0",
+    "uuid": "^8.3.2",
     "websocket": "^1.0.34"
   },
   "devDependencies": {
