--- a/client/.env
+++ b/client/.env
@@ -1,2 +1,4 @@
 SKIP_PREFLIGHT_CHECK=true
 REACT_APP_HOST=3000
+REACT_APP_URL_BACK_SERVER=http://localhost:3001
+REACT_APP_URL_FRONT_SERVER=http://localhost:3000
