--- a/server/package.json
+++ b/server/package.json
@@ -4,21 +4,14 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "main": "server.js",
-  "scripts": {
-    "start": "killall -9 node; clear; node server.js",
-    "dev": "killall -9 node; clear; nodemon server.js"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
   "main": "index.js",
   "scripts": {
     "start": "node server.js",
-    "dev":"nodemon server.js",
+    "dev": "nodemon server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
+    "axios": "^0.24.0",
     "bcrypt": "^5.0.1",
     "connect-redis": "^6.0.0",
     "cookie-parser": "^1.4.5",
