--- a/client/package.json
+++ b/client/package.json
@@ -23,6 +23,7 @@
     "react-social-login-buttons": "^3.6.0",
     "redux": "^4.1.2",
     "redux-devtools-extension": "^2.13.9",
+    "redux-persist": "^6.0.0",
     "redux-saga": "^1.1.3",
     "redux-thunk": "^2.4.0",
     "sass": "^1.43.4",
